# selenium-mcp

./: .gitignore  CHANGELOG.md  Dockerfile.glama  README.md  glama.json  pyproject.toml
.github/workflows/: publish-jetbrains.yml  publish-pypi.yml
jetbrains-plugin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
jetbrains-plugin/src/main/kotlin/io/github/seleniumboot/mcp/: InstallAction.kt  InstallChecker.kt  MCPRegistrar.kt  SeleniumbootStartupActivity.kt
jetbrains-plugin/src/main/kotlin/tech/raza/seleniumboot/: InstallAction.kt  InstallChecker.kt  MCPRegistrar.kt  SeleniumbootStartupActivity.kt
src/: server.py
src/selenium_mcp/: server.py
src/selenium_mcp/tools/: _attrs.py  _detect.py  _locators.py  assertion_tools.py  browser_tools.py  codegen_tools.py  element_tools.py
src/tools/: assertion_tools.py  browser_tools.py  codegen_tools.py  element_tools.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
