[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seleniumboot-mcp"
version = "0.2.3"
description = "A Python MCP server for Selenium WebDriver — browser automation, Java TestNG/JUnit5/Cucumber codegen, and Page Object Model generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raza Tech", email = "razatechnologyservices@gmail.com" }]
keywords = ["selenium", "mcp", "test-automation", "webdriver", "testng", "junit", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "selenium>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/seleniumboot/selenium-mcp"
Repository = "https://github.com/seleniumboot/selenium-mcp"
Issues = "https://github.com/seleniumboot/selenium-mcp/issues"

[project.scripts]
seleniumboot-mcp = "selenium_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]
